# ihu_courses

./: .buildinfo  .gitignore  genindex.html  intro.html  markdown-01.html  markdown-02.html  markdown-03.html  markdown-04.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  references.html  requirements-01.txt  requirements.in  requirements.txt  search.html  searchindex.js
_sources/: markdown-01.md  markdown-02.md  markdown-notebooks.ipynb
_sources/concrete/: enal_loads.md
_sources/example5/: Untitled.ipynb  example5.ipynb  example5.md
_sources/mitroa/example4/: example4.ipynb
_sources/mitroa/example9/: example9.ipynb
concrete/: enal_loads.html
example5/: Untitled.html  example5.html
ihu_courses_ebook/: .jupytext.toml  _config.yml  _toc.yml  markdown-03.md  references.bib
ihu_courses_ebook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
ihu_courses_ebook/_build/html/: .buildinfo  genindex.html  intro.html  (+4 more)
ihu_courses_ebook/concrete/: enal_loads.md
ihu_courses_ebook/example5/: example5.ipynb
ihu_courses_ebook/mitroa/: index.md
mitroa/: examples.html  modelling.html
mitroa/example4/: example4.html
mitroa/example5/: example5.html
mitroa/example6/: example6.html
mitroa/example7/: example7-trans.html  example7.html
mitroa/example8/: example8-trans.html
mitroa/example9/: example9.html
mitroa/modelling/: frame2d_pi.html  frame2d_truss.html  sap2000_default.html  sap2000_no_shear.html  sap2000_truss.html  statics_vs_sap.html
(+53 files in other folders)
