[tool.poetry]
name = "ihu-courses"
version = "0.1.0"
description = ""
authors = ["panagop <gpanagop@gmail.com>"]
readme = "README.md"
packages = [{include = "common"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10.0"
jupyterlab = "^3.5.0"
streng = "^0.0.7"
vfo = "^0.0.9"
opsvis = "^1.0.21"
cached-property = "^1.5.2"
jupyter = "^1.0.0"
jupyter-book = "^0.13.1"
ghp-import = "^2.1.0"
jupytext = "^1.14.1"
openseespy = "3.4.0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
